--- a/ConsultaAgendaAD/local.properties
+++ b/ConsultaAgendaAD/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 14 08:21:37 CEST 2021
-sdk.dir=/Users/dam14/Library/Android/sdk
+#Thu Dec 09 19:08:47 CET 2021
+sdk.dir=C\:\\Users\\Oscar\\AppData\\Local\\Android\\Sdk
